[package]
name = "ic_rust_agent_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = "0.31.0"
candid = "0.10.1"
tokio = { version = "1.35.1", features = ["full"] }
ic-cdk = "0.12.0"
serde = "1.0.193"
serde_bytes = "0.11.12"